tests/src/Loader/classloader/generics/Instantiation/Negative/abstract04.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    class _generics_Instantiation_Negative_abstract04_abstract04_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Negative_abstract04_abstract04_cmd()
        {
            int rv = CoreClrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Negative\\abstract04\\abstract04.cmd");
            Assert.Equal(rv, CoreClrTestWrapperLib.EXIT_SUCCESS_CODE);
        }
    }
}
